[package]
name = "crfsuite"
version = "0.3.1"
authors = ["Messense Lv <messense@icloud.com>"]
description = "Safe wrapper of crfsuite"
license = "MIT"
repository = "https://github.com/messense/crfsuite-rs"
keywords = ["crf", "crfsuite"]
readme = "README.md"
edition = "2018"
exclude = [
    "cabi/*"
]

[dependencies]
libc = "0.2"
crfsuite-sys = { path = "crfsuite-sys", version = "0.3" }
env_logger = "0.11.3"
log = "0.4.21"

[workspace]
members = [
    ".",
    "crfsuite-sys",
    "cabi",
]

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
